[package]
name = "clay-hyper"
version = "0.0.1"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "OpenCL ray/path tracer in Lobachevsky (hyperbolic) space"
homepage = "https://github.com/nthend/clay"
repository = "https://github.com/nthend/clay"
readme = "README.md"

keywords = ["ray-tracing", "path-tracing", "opencl", "lobachevsky", "hyperbolic"]
categories = ["graphics", "rendering", "multimedia"]

[dependencies]
